--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,46 +87,16 @@ p {
     color: #ffffff;
 }
 
-.benefit-lead {
+.benefit-items {
     margin-bottom: 32px;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-}
-
-.benefit-lead h3 {
+.benefit-items h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
+.benefit-items img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
